--- a/osrs-char-sheets/src/assets/_vars.scss
+++ b/osrs-char-sheets/src/assets/_vars.scss
@@ -73,7 +73,7 @@ $mat-light-theme-foreground: (
 );
 
 // Dark Theme text
-$light-text: #ffffff;
+$light-text: black;
 $light-primary-text: $light-text;
 $light-accent-text: rgba($light-primary-text, 0.7);
 $light-disabled-text: rgba($light-primary-text, 0.5);
@@ -130,7 +130,7 @@ $mat-light-theme-background: (
 );
 
 // Dark bg
-$dark-background:     #2c2c2c;
+$dark-background:     rgba(255, 255, 255, 0);
 $dark-bg-lighter-5:   lighten($dark-background, 5%);
 $dark-bg-lighter-10:  lighten($dark-background, 10%);
 $dark-bg-lighter-20:  lighten($dark-background, 20%);
@@ -261,4 +261,8 @@ $theme: (
   .mat-badge-content {
     font-family: 'Roboto';
   }
+}
+
+.mat-mdc-card {
+  box-shadow: none;
 }
