--- a/osrs-char-sheets/src/app/character-sheet/character-sheet.component.scss
+++ b/osrs-char-sheets/src/app/character-sheet/character-sheet.component.scss
@@ -13,7 +13,11 @@ mat-form-field {
   font-size: 40px;
 }
 
-.window {
-  height: calc(100vh - 124px);
-  overflow: auto;
+.mat-icon {
+  height: auto;
+  width: auto;
+}
+
+mat-card-title {
+  text-align: left;
 }
