I hate this fix

--- a/osrs-char-sheets/src/app/app.component.scss
+++ b/osrs-char-sheets/src/app/app.component.scss
@@ -18,7 +18,8 @@ mat-toolbar {
 .sidenav {
   padding: 20px;
   width: auto;
-  //background: url(https://www.runescape.com/img/rsp777/hiscores/banner_middle2.gif) repeat-y;
+  background: url(https://www.runescape.com/img/rsp777/hiscores/scroll_middle.gif);
+  background-size: contain;
 }
 
 .logout {
