--- a/osrs-char-sheets/src/app/character-sheet/nav-bar/character-delete.html
+++ b/osrs-char-sheets/src/app/character-sheet/nav-bar/character-delete.html
@@ -1,10 +1,15 @@
-<h2 mat-dialog-title>Are you sure you want to delete this character?</h2>
-<mat-dialog-content class="mat-typography">
-  <h3>Notice</h3>
-  <p>This is not an archive or a hide, it will be forever gone.</p>
+<div class="container">
+  <img src="https://www.runescape.com/img/rsp777/hiscores/scroll_top.gif" style="width:100%">
+ <h2 mat-dialog-title>Are you sure you want to delete this character?</h2>
+  <mat-dialog-content class="mat-typography">
+    <h3>Notice</h3>
+    <p>This is not an archive or a hide, it will be forever gone.</p>
 
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Confirm</button>
-</mat-dialog-actions>
+  </mat-dialog-content>
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Confirm</button>
+  </mat-dialog-actions>
+  <img src="https://www.runescape.com/img/rsp777/hiscores/scroll_bottom.gif" style="width:100%">
+</div>
+
