commit before refactor

--- a/osrs-char-sheets/src/app/character-sheet/character-sheet.component.html
+++ b/osrs-char-sheets/src/app/character-sheet/character-sheet.component.html
@@ -7,6 +7,8 @@
 
     <char-sheet-defense [formGroup]="charForm"></char-sheet-defense>
 
+    <char-sheet-skills [formGroup]="charForm"></char-sheet-skills>
+
     <char-sheet-spells [formGroup]="charForm"></char-sheet-spells>
 
   </form>
