fix size dropdown, add skills icon, add skills to bottom nav

--- a/osrs-char-sheets/src/app/character-sheet/character-sheet.component.scss
+++ b/osrs-char-sheets/src/app/character-sheet/character-sheet.component.scss
@@ -25,3 +25,16 @@ mat-card-title {
 .skill {
   text-align: left;
 }
+
+.mat-mdc-card {
+  background-color: transparent;
+  box-shadow: none;
+}
+
+::ng-deep .mdc-text-field {
+  background: transparent !important;
+}
+
+::ng-deep .mdc-menu-surface {
+  background: url('../../assets/scroll-bg.png') !important;
+}
