--- a/osrs-char-sheets/src/app/character-sheet/nav-bar/nav-bar.component.html
+++ b/osrs-char-sheets/src/app/character-sheet/nav-bar/nav-bar.component.html
@@ -8,6 +8,9 @@
   <button mat-icon-button (click)="scroll('#defense')">
     <mat-icon>shield</mat-icon>
   </button>
+  <button mat-icon-button (click)="scroll('#skills')">
+    <mat-icon>construction</mat-icon>
+  </button>
   <button mat-icon-button (click)="scroll('#spells')">
     <mat-icon>offline_bolt</mat-icon>
   </button>
