--- a/osrs-char-sheets/src/app/character-sheet/skills/skills.component.html
+++ b/osrs-char-sheets/src/app/character-sheet/skills/skills.component.html
@@ -2,7 +2,7 @@
   <mat-card class="parent-card">
     <mat-card-header>
       <div mat-card-avatar>
-          <mat-icon class="avatar-icon">account_circle</mat-icon>
+          <mat-icon class="avatar-icon">construction</mat-icon>
       </div>
       <mat-card-title>Skills</mat-card-title>
       <mat-card-subtitle>Chop chop!</mat-card-subtitle>
