--- a/osrs-char-sheets/src/app/character-sheet/skills/skills.component.html
+++ b/osrs-char-sheets/src/app/character-sheet/skills/skills.component.html
@@ -20,7 +20,7 @@
           <mat-form-field appearance="fill">
             <mat-label>Acrobatics Ability Score</mat-label>
             <input matInput type="number" disabled
-              value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.acrobatics.abilityMod')?.value) | async}}">
+              value="{{characterService.dexMod | async}}">
           </mat-form-field>
           <mat-form-field appearance="fill">
             <mat-label>Acrobatics Mod</mat-label>
@@ -40,7 +40,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Arcana Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.arcana.abilityMod')?.value) | async}}">
+            value="{{characterService.intMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Arcana Mod</mat-label>
@@ -60,7 +60,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Athletics Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.athletics.abilityMod')?.value) | async}}">
+            value="{{characterService.strMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Athletics Mod</mat-label>
@@ -80,7 +80,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Deception Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.deception.abilityMod')?.value) | async}}">
+            value="{{characterService.chaMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Deception Mod</mat-label>
@@ -100,7 +100,7 @@
         <mat-form-field appearance="fill">
           <mat-label>History Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.history.abilityMod')?.value) | async}}">
+            value="{{characterService.intMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>History Mod</mat-label>
@@ -120,7 +120,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Insight Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.insight.abilityMod')?.value) | async}}">
+            value="{{characterService.wisMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Insight Mod</mat-label>
@@ -140,7 +140,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Intimidation Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.intimidation.abilityMod')?.value) | async}}">
+            value="{{characterService.chaMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Intimidation Mod</mat-label>
@@ -160,7 +160,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Investigation Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.investigation.abilityMod')?.value) | async}}">
+            value="{{characterService.intMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Investigation Mod</mat-label>
@@ -180,7 +180,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Nature Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.nature.abilityMod')?.value) | async}}">
+            value="{{characterService.intMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Nature Mod</mat-label>
@@ -200,7 +200,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Perception Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.perception.abilityMod')?.value) | async}}">
+            value="{{characterService.wisMod| async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Perception Mod</mat-label>
@@ -220,7 +220,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Performance Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.performance.abilityMod')?.value) | async}}">
+            value="{{characterService.chaMod| async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Performance Mod</mat-label>
@@ -240,7 +240,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Persuasion Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.persuasion.abilityMod')?.value) | async}}">
+            value="{{characterService.chaMod| async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Persuasion Mod</mat-label>
@@ -260,7 +260,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Religion Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.religion.abilityMod')?.value) | async}}">
+            value="{{characterService.intMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Religion Mod</mat-label>
@@ -280,7 +280,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Stealth Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.stealth.abilityMod')?.value) | async}}">
+            value="{{characterService.dexMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Stealth Mod</mat-label>
@@ -300,7 +300,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Survival Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.survival.abilityMod')?.value) | async}}">
+            value="{{characterService.wisMod| async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Survival Mod</mat-label>
@@ -320,7 +320,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Runecraft Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.runecraft.abilityMod')?.value) | async}}">
+            value="{{characterService.intMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Runecraft Mod</mat-label>
@@ -340,7 +340,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Construction Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.construction.abilityMod')?.value) | async}}">
+            value="{{characterService.strMod| async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Construction Mod</mat-label>
@@ -360,7 +360,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Herblore Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.herblore.abilityMod')?.value) | async}}">
+            value="{{characterService.intMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Herblore Mod</mat-label>
@@ -380,7 +380,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Thieving Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.thieving.abilityMod')?.value) | async}}">
+            value="{{characterService.dexMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Thieving Mod</mat-label>
@@ -400,7 +400,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Crafting Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.crafting.abilityMod')?.value) | async}}">
+            value="{{characterService.intMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Crafting Mod</mat-label>
@@ -420,7 +420,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Fletching Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.fletching.abilityMod')?.value) | async}}">
+            value="{{characterService.dexMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Fletching Mod</mat-label>
@@ -440,7 +440,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Hunter Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.hunter.abilityMod')?.value) | async}}">
+            value="{{characterService.dexMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Hunter Mod</mat-label>
@@ -460,7 +460,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Mining Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.mining.abilityMod')?.value) | async}}">
+            value="{{characterService.strMod| async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Mining Mod</mat-label>
@@ -480,7 +480,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Smithing Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.smithing.abilityMod')?.value) | async}}">
+            value="{{characterService.strMod| async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Smithing Mod</mat-label>
@@ -500,7 +500,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Fishing Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.fishing.abilityMod')?.value) | async}}">
+            value="{{characterService.wisMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Fishing Mod</mat-label>
@@ -520,7 +520,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Cooking Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.cooking.abilityMod')?.value) | async}}">
+            value="{{characterService.intMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Cooking Mod</mat-label>
@@ -540,7 +540,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Woodcutting Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.woodcutting.abilityMod')?.value) | async}}">
+            value="{{characterService.strMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Woodcutting Mod</mat-label>
@@ -560,7 +560,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Farming Ability Score</mat-label>
           <input matInput type="number" disabled
-            value="{{characterService.getAbilityModFromEnum(formGroup.get('skills.farming.abilityMod')?.value) | async}}">
+            value="{{characterService.intMod | async}}">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Farming Mod</mat-label>
