feat: notes and more

--- a/osrs-char-sheets/src/app/character-sheet/character-sheet.component.html
+++ b/osrs-char-sheets/src/app/character-sheet/character-sheet.component.html
@@ -5,11 +5,15 @@
 
     <char-sheet-abilities [formGroup]="charForm"></char-sheet-abilities>
 
+    <char-sheet-saves [formGroup]="charForm"></char-sheet-saves>
+
     <char-sheet-defense [formGroup]="charForm"></char-sheet-defense>
 
     <char-sheet-skills [formGroup]="charForm"></char-sheet-skills>
 
     <char-sheet-spells [formGroup]="charForm"></char-sheet-spells>
+
+    <char-sheet-notes [formGroup]="charForm"></char-sheet-notes>
 
   </form>
 
