--- a/osrs-char-sheets/src/app/character-sheet/character-sheet.component.scss
+++ b/osrs-char-sheets/src/app/character-sheet/character-sheet.component.scss
@@ -38,3 +38,7 @@ mat-card-title {
 ::ng-deep .mdc-menu-surface {
   background: url('../../assets/scroll-bg.png') !important;
 }
+
+.full-width {
+  width: 100%;
+}
