--- a/osrs-char-sheets/src/app/character-sheet/nav-bar/nav-bar.component.html
+++ b/osrs-char-sheets/src/app/character-sheet/nav-bar/nav-bar.component.html
@@ -5,6 +5,9 @@
   <button mat-icon-button (click)="scroll('#abilities')">
     <mat-icon>psychology</mat-icon>
   </button>
+  <button mat-icon-button (click)="scroll('#saves')">
+    <mat-icon>save</mat-icon>
+  </button>
   <button mat-icon-button (click)="scroll('#defense')">
     <mat-icon>shield</mat-icon>
   </button>
@@ -13,6 +16,9 @@
   </button>
   <button mat-icon-button (click)="scroll('#spells')">
     <mat-icon>offline_bolt</mat-icon>
+  </button>
+  <button mat-icon-button (click)="scroll('#notes')">
+    <mat-icon>edit</mat-icon>
   </button>
   <span class="spacer"></span>
   <button mat-icon-button (click)="openDialog()">
