feat: offense and todo equipment

--- a/osrs-char-sheets/src/app/character-sheet/character-sheet.component.html
+++ b/osrs-char-sheets/src/app/character-sheet/character-sheet.component.html
@@ -7,6 +7,8 @@
 
     <char-sheet-saves [formGroup]="charForm"></char-sheet-saves>
 
+    <char-sheet-offense [formGroup]="charForm"></char-sheet-offense>
+
     <char-sheet-defense [formGroup]="charForm"></char-sheet-defense>
 
     <char-sheet-skills [formGroup]="charForm"></char-sheet-skills>
