--- a/osrs-char-sheets/src/app/character-sheet/nav-bar/nav-bar.component.html
+++ b/osrs-char-sheets/src/app/character-sheet/nav-bar/nav-bar.component.html
@@ -8,6 +8,9 @@
   <button mat-icon-button (click)="scroll('#saves')">
     <mat-icon>save</mat-icon>
   </button>
+  <button mat-icon-button (click)="scroll('#offense')">
+    <mat-icon>key</mat-icon>
+  </button>
   <button mat-icon-button (click)="scroll('#defense')">
     <mat-icon>shield</mat-icon>
   </button>
